[gd_scene load_steps=5 format=3 uid="uid://clw44r8x1crc4"]

[ext_resource type="Script" uid="uid://dhuy30a0gdfne" path="res://Scripts/player_ui.gd" id="1_ehg4m"]
[ext_resource type="Texture2D" uid="uid://b2smohbvbn035" path="res://Assets/crosshair051.png" id="1_vq5xy"]
[ext_resource type="PackedScene" uid="uid://d4cuc4p5xejx" path="res://ui/pause_menu.tscn" id="2_ehg4m"]
[ext_resource type="PackedScene" uid="uid://c5iqv62sris5k" path="res://ui/task_ui.tscn" id="4_iwa1g"]

[node name="Player_ui" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehg4m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="crosshair" type="CenterContainer" parent="CanvasLayer"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="crosshair_text" type="TextureRect" parent="CanvasLayer/crosshair"]
layout_mode = 2
texture = ExtResource("1_vq5xy")

[node name="pause_menu" parent="." instance=ExtResource("2_ehg4m")]

[node name="task_ui" parent="." instance=ExtResource("4_iwa1g")]

[connection signal="pressed" from="pause_menu/resume" to="." method="resume_game"]
[connection signal="pressed" from="pause_menu/quit_game" to="." method="quit_game"]

[editable path="pause_menu"]
